crates/rome_js_formatter/tests/specs/prettier/typescript/assignment/issue-5370.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: issue-5370.ts

---
# Input
```js
const durabilityMetricsSelectable: Immutable.OrderedSet<
  SomeReportingMetric,
> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);

```

# Output
```js
const durabilityMetricsSelectable: Immutable.OrderedSet<
  SomeReportingMetric,
> = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);

```

# Errors
```
error[SyntaxError]: expected a type parameter but instead found '>'
  ┌─ issue-5370.ts:3:1
  │
3 │ > = myExperienceSelectable.concat(otherDurabilityMetricsSelectable);
  │ ^ Expected a type parameter here


```


